--- a/.github/workflows/validate-links.yml
+++ b/.github/workflows/validate-links.yml
@@ -17,18 +17,21 @@ jobs:
       - name: Check links
         id: lychee
         uses: lycheeverse/lychee-action@v2.2.0
+        continue-on-error: true  # Permite que o workflow continue mesmo se encontrar links quebrados
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create issue
-        if: env.lychee_exit_code != 0
+        if: steps.lychee.outcome != 'success'  # Verifica o resultado do passo do Lychee
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link checker report
           labels: 'report, automated-issue'
           content-filepath: ./lychee/out.md
       - name: Assign issues and pull requests
-        if: env.lychee_exit_code != 0
+        if: steps.lychee.conclusion != 'success'
         uses: gustavofreze/auto-assign@1.1.4
         with:
-          assignees: '${{ secrets.ASSIGNEES }}'
+          assignees: 'your-github-username'
           github_token: '${{ secrets.GITHUB_TOKEN }}'
           allow_self_assign: 'true'
           allow_no_assignees: 'true'
