--- a/.github/workflows/validate-links.yml
+++ b/.github/workflows/validate-links.yml
@@ -3,6 +3,7 @@ name: Validate links
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   link-checker:
@@ -15,15 +16,17 @@ jobs:
       - name: Check links
         id: lychee
         uses: lycheeverse/lychee-action@v2.7.0
+        with:
+          fail: false
       - name: Create issue
-        if: env.lychee_exit_code != 0
+        if: steps.lychee.outputs.exit_code != 0
         uses: peter-evans/create-issue-from-file@v6
         with:
           title: Link checker report
           labels: 'report, automated-issue'
           content-filepath: ./lychee/out.md
       - name: Assign issues and pull requests
-        if: env.lychee_exit_code != 0
+        if: steps.lychee.outputs.exit_code != 0
         uses: gustavofreze/auto-assign@2.0.0
         with:
           assignees: '${{ vars.ASSIGNEES }}'
